Replace WebC with Nunjucks
WebC seems promising, but having trouble getting component changes picked up, style bundles in particular. Also idiosyncrasies like needing to use `$data` to reference frontmatter properties which keep tripping me up. Going back to tried and true.

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,6 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{css,html,json,md,webc}]
+[*.{css,html,json,md,njk}]
 indent_size = 2
 indent_style = space
