--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@11ty/eleventy": "^2.0.0",
     "@11ty/eleventy-plugin-bundle": "^1.0.4",
     "html-prettify": "^1.0.7",
+    "luxon": "^3.3.0",
     "markdown-it-abbr": "^2.0.0",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-emoji": "^3.0.0",
