Add image processing shortcode

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "BSD-3-Clause-Clear",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "@11ty/eleventy-img": "^3.1.1",
     "@11ty/eleventy-plugin-bundle": "^1.0.4",
     "html-prettify": "^1.0.7",
     "luxon": "^3.3.0",
